--- a/src/assets/css/common.css
+++ b/src/assets/css/common.css
@@ -53,19 +53,19 @@ H5全局
 ================================*/
 @media all and (max-width: 640px) {
   html {
-    font-size: 15px; } }
+    font-size: 125%; } }
 @media all and (max-width: 480px) {
   html {
-    font-size: 15px; } }
+    font-size: 93.75%; } }
 @media all and (max-width: 360px) {
   html {
-    font-size: 13px; } }
+    font-size: 70.3125%; } }
 @media all and (max-width: 320px) {
   html {
-    font-size: 13px; } }
+    font-size: 62.5%; } }
 @media all and (max-width: 240px) {
   html {
-    font-size: 12px; } }
+    font-size: 46.875%; } }
 /*
 全局防止越界
 ================================*/
@@ -102,46 +102,46 @@ input {
 尺寸
 ================================*/
 .fs5 {
-  font-size: 0.385rem !important; }
+  font-size: 0.5rem !important; }
 
 .fs8 {
-  font-size: 0.615rem !important; }
+  font-size: 0.8rem !important; }
 
 .fs10 {
-  font-size: 0.769rem !important; }
-
-.fs11 {
-  font-size: 0.846rem !important; }
-
-.fs12 {
-  font-size: 0.923rem !important; }
-
-.fs13 {
   font-size: 1rem !important; }
 
+.fs11 {
+  font-size: 1.1rem !important; }
+
+.fs12 {
+  font-size: 1.2rem !important; }
+
+.fs13 {
+  font-size: 1.3rem !important; }
+
 .fs14 {
-  font-size: 1.077rem !important; }
+  font-size: 1.4rem !important; }
 
 .fs15 {
-  font-size: 1.154rem !important; }
+  font-size: 1.5rem !important; }
 
 .fs16 {
-  font-size: 1.23rem !important; }
+  font-size: 1.6rem !important; }
 
 .fs18 {
-  font-size: 1.385rem !important; }
+  font-size: 1.8rem !important; }
 
 .fs20 {
-  font-size: 1.53846rem !important; }
+  font-size: 2rem !important; }
 
 .fs24 {
-  font-size: 1.846rem !important; }
+  font-size: 2.4rem !important; }
 
 .fs32 {
-  font-size: 2.4615rem !important; }
+  font-size: 3.2rem !important; }
 
 .fs36 {
-  font-size: 2.76923rem !important; }
+  font-size: 3.6rem !important; }
 
 .fw1 {
   font-weight: 100 !important; }
@@ -207,340 +207,340 @@ input {
   margin-top: 0 !important; }
 
 .mt5 {
-  margin-top: 0.385rem !important; }
+  margin-top: 0.5rem !important; }
 
 .mt8 {
-  margin-top: 0.615rem !important; }
+  margin-top: 0.8rem !important; }
 
 .mt10 {
-  margin-top: 0.769rem !important; }
-
-.mt11 {
-  margin-top: 0.846rem !important; }
-
-.mt12 {
-  margin-top: 0.923rem !important; }
-
-.mt13 {
   margin-top: 1rem !important; }
 
+.mt11 {
+  margin-top: 1.1rem !important; }
+
+.mt12 {
+  margin-top: 1.2rem !important; }
+
+.mt13 {
+  margin-top: 1.3rem !important; }
+
 .mt14 {
-  margin-top: 1.077rem !important; }
+  margin-top: 1.4rem !important; }
 
 .mt15 {
-  margin-top: 1.154rem !important; }
+  margin-top: 1.5rem !important; }
 
 .mt16 {
-  margin-top: 1.23rem !important; }
+  margin-top: 1.6rem !important; }
 
 .mt18 {
-  margin-top: 1.385rem !important; }
+  margin-top: 1.8rem !important; }
 
 .mt20 {
-  margin-top: 1.53846rem !important; }
+  margin-top: 2rem !important; }
 
 .mt24 {
-  margin-top: 1.846rem !important; }
+  margin-top: 2.4rem !important; }
 
 .mt32 {
-  margin-top: 2.4615rem !important; }
+  margin-top: 3.2rem !important; }
 
 .mt36 {
-  margin-top: 2.76923rem !important; }
+  margin-top: 3.6rem !important; }
 
 .mb5 {
-  margin-bottom: 0.385rem !important; }
+  margin-bottom: 0.5rem !important; }
 
 .mb8 {
-  margin-bottom: 0.615rem !important; }
+  margin-bottom: 0.8rem !important; }
 
 .mb10 {
-  margin-bottom: 0.769rem !important; }
-
-.mb11 {
-  margin-bottom: 0.846rem !important; }
-
-.mb12 {
-  margin-bottom: 0.923rem !important; }
-
-.mb13 {
   margin-bottom: 1rem !important; }
 
+.mb11 {
+  margin-bottom: 1.1rem !important; }
+
+.mb12 {
+  margin-bottom: 1.2rem !important; }
+
+.mb13 {
+  margin-bottom: 1.3rem !important; }
+
 .mb14 {
-  margin-bottom: 1.077rem !important; }
+  margin-bottom: 1.4rem !important; }
 
 .mb15 {
-  margin-bottom: 1.154rem !important; }
+  margin-bottom: 1.5rem !important; }
 
 .mb16 {
-  margin-bottom: 1.23rem !important; }
+  margin-bottom: 1.6rem !important; }
 
 .mb18 {
-  margin-bottom: 1.385rem !important; }
+  margin-bottom: 1.8rem !important; }
 
 .mb20 {
-  margin-bottom: 1.53846rem !important; }
+  margin-bottom: 2rem !important; }
 
 .mb24 {
-  margin-bottom: 1.846rem !important; }
+  margin-bottom: 2.4rem !important; }
 
 .mb32 {
-  margin-bottom: 2.4615rem !important; }
+  margin-bottom: 3.2rem !important; }
 
 .mb36 {
-  margin-bottom: 2.76923rem !important; }
+  margin-bottom: 3.6rem !important; }
 
 .ml5 {
-  margin-left: 0.385rem !important; }
+  margin-left: 0.5rem !important; }
 
 .ml8 {
-  margin-left: 0.615rem !important; }
+  margin-left: 0.8rem !important; }
 
 .ml10 {
-  margin-left: 0.769rem !important; }
-
-.ml11 {
-  margin-left: 0.846rem !important; }
-
-.ml12 {
-  margin-left: 0.923rem !important; }
-
-.ml13 {
   margin-left: 1rem !important; }
 
+.ml11 {
+  margin-left: 1.1rem !important; }
+
+.ml12 {
+  margin-left: 1.2rem !important; }
+
+.ml13 {
+  margin-left: 1.3rem !important; }
+
 .ml14 {
-  margin-left: 1.077rem !important; }
+  margin-left: 1.4rem !important; }
 
 .ml15 {
-  margin-left: 1.154rem !important; }
+  margin-left: 1.5rem !important; }
 
 .ml16 {
-  margin-left: 1.23rem !important; }
+  margin-left: 1.6rem !important; }
 
 .ml18 {
-  margin-left: 1.385rem !important; }
+  margin-left: 1.8rem !important; }
 
 .ml20 {
-  margin-left: 1.53846rem !important; }
+  margin-left: 2rem !important; }
 
 .ml24 {
-  margin-left: 1.846rem !important; }
+  margin-left: 2.4rem !important; }
 
 .ml32 {
-  margin-left: 2.4615rem !important; }
+  margin-left: 3.2rem !important; }
 
 .ml36 {
-  margin-left: 2.76923rem !important; }
+  margin-left: 3.6rem !important; }
 
 .mr5 {
-  margin-right: 0.385rem !important; }
+  margin-right: 0.5rem !important; }
 
 .mr8 {
-  margin-right: 0.615rem !important; }
+  margin-right: 0.8rem !important; }
 
 .mr10 {
-  margin-right: 0.769rem !important; }
-
-.mr11 {
-  margin-right: 0.846rem !important; }
-
-.mr12 {
-  margin-right: 0.923rem !important; }
-
-.mr13 {
   margin-right: 1rem !important; }
 
+.mr11 {
+  margin-right: 1.1rem !important; }
+
+.mr12 {
+  margin-right: 1.2rem !important; }
+
+.mr13 {
+  margin-right: 1.3rem !important; }
+
 .mr14 {
-  margin-right: 1.077rem !important; }
+  margin-right: 1.4rem !important; }
 
 .mr15 {
-  margin-right: 1.154rem !important; }
+  margin-right: 1.5rem !important; }
 
 .mr16 {
-  margin-right: 1.23rem !important; }
+  margin-right: 1.6rem !important; }
 
 .mr18 {
-  margin-right: 1.385rem !important; }
+  margin-right: 1.8rem !important; }
 
 .mr20 {
-  margin-right: 1.53846rem !important; }
+  margin-right: 2rem !important; }
 
 .mr24 {
-  margin-right: 1.846rem !important; }
+  margin-right: 2.4rem !important; }
 
 .mr32 {
-  margin-right: 2.4615rem !important; }
+  margin-right: 3.2rem !important; }
 
 .mr36 {
-  margin-right: 2.76923rem !important; }
+  margin-right: 3.6rem !important; }
 
 .pt5 {
-  padding-top: 0.385rem !important; }
+  padding-top: 0.5rem !important; }
 
 .pt8 {
-  padding-top: 0.615rem !important; }
+  padding-top: 0.8rem !important; }
 
 .pt10 {
-  padding-top: 0.769rem !important; }
-
-.pt11 {
-  padding-top: 0.846rem !important; }
-
-.pt12 {
-  padding-top: 0.923rem !important; }
-
-.pt13 {
   padding-top: 1rem !important; }
 
+.pt11 {
+  padding-top: 1.1rem !important; }
+
+.pt12 {
+  padding-top: 1.2rem !important; }
+
+.pt13 {
+  padding-top: 1.3rem !important; }
+
 .pt14 {
-  padding-top: 1.077rem !important; }
+  padding-top: 1.4rem !important; }
 
 .pt15 {
-  padding-top: 1.154rem !important; }
+  padding-top: 1.5rem !important; }
 
 .pt16 {
-  padding-top: 1.23rem !important; }
+  padding-top: 1.6rem !important; }
 
 .pt18 {
-  padding-top: 1.385rem !important; }
+  padding-top: 1.8rem !important; }
 
 .pt20 {
-  padding-top: 1.53846rem !important; }
+  padding-top: 2rem !important; }
 
 .pt24 {
-  padding-top: 1.846rem !important; }
+  padding-top: 2.4rem !important; }
 
 .pt32 {
-  padding-top: 2.4615rem !important; }
+  padding-top: 3.2rem !important; }
 
 .pt36 {
-  padding-top: 2.76923rem !important; }
+  padding-top: 3.6rem !important; }
 
 .pb5 {
-  padding-bottom: 0.385rem !important; }
+  padding-bottom: 0.5rem !important; }
 
 .pb8 {
-  padding-bottom: 0.615rem !important; }
+  padding-bottom: 0.8rem !important; }
 
 .pb10 {
-  padding-bottom: 0.769rem !important; }
-
-.pb11 {
-  padding-bottom: 0.846rem !important; }
-
-.pb12 {
-  padding-bottom: 0.923rem !important; }
-
-.pb13 {
   padding-bottom: 1rem !important; }
 
+.pb11 {
+  padding-bottom: 1.1rem !important; }
+
+.pb12 {
+  padding-bottom: 1.2rem !important; }
+
+.pb13 {
+  padding-bottom: 1.3rem !important; }
+
 .pb14 {
-  padding-bottom: 1.077rem !important; }
+  padding-bottom: 1.4rem !important; }
 
 .pb15 {
-  padding-bottom: 1.154rem !important; }
+  padding-bottom: 1.5rem !important; }
 
 .pb16 {
-  padding-bottom: 1.23rem !important; }
+  padding-bottom: 1.6rem !important; }
 
 .pb18 {
-  padding-bottom: 1.385rem !important; }
+  padding-bottom: 1.8rem !important; }
 
 .pb20 {
-  padding-bottom: 1.53846rem !important; }
+  padding-bottom: 2rem !important; }
 
 .pb24 {
-  padding-bottom: 1.846rem !important; }
+  padding-bottom: 2.4rem !important; }
 
 .pb32 {
-  padding-bottom: 2.4615rem !important; }
+  padding-bottom: 3.2rem !important; }
 
 .pb36 {
-  padding-bottom: 2.76923rem !important; }
+  padding-bottom: 3.6rem !important; }
 
 .pl5 {
-  padding-left: 0.385rem !important; }
+  padding-left: 0.5rem !important; }
 
 .pl8 {
-  padding-left: 0.615rem !important; }
+  padding-left: 0.8rem !important; }
 
 .pl10 {
-  padding-left: 0.769rem !important; }
-
-.pl11 {
-  padding-left: 0.846rem !important; }
-
-.pl12 {
-  padding-left: 0.923rem !important; }
-
-.pl13 {
   padding-left: 1rem !important; }
 
+.pl11 {
+  padding-left: 1.1rem !important; }
+
+.pl12 {
+  padding-left: 1.2rem !important; }
+
+.pl13 {
+  padding-left: 1.3rem !important; }
+
 .pl14 {
-  padding-left: 1.077rem !important; }
+  padding-left: 1.4rem !important; }
 
 .pl15 {
-  padding-left: 1.154rem !important; }
+  padding-left: 1.5rem !important; }
 
 .pl16 {
-  padding-left: 1.23rem !important; }
+  padding-left: 1.6rem !important; }
 
 .pl18 {
-  padding-left: 1.385rem !important; }
+  padding-left: 1.8rem !important; }
 
 .pl20 {
-  padding-left: 1.53846rem !important; }
+  padding-left: 2rem !important; }
 
 .pl24 {
-  padding-left: 1.846rem !important; }
+  padding-left: 2.4rem !important; }
 
 .pl32 {
-  padding-left: 2.4615rem !important; }
+  padding-left: 3.2rem !important; }
 
 .pl36 {
-  padding-left: 2.76923rem !important; }
+  padding-left: 3.6rem !important; }
 
 .pr5 {
-  padding-right: 0.385rem !important; }
+  padding-right: 0.5rem !important; }
 
 .pr8 {
-  padding-right: 0.615rem !important; }
+  padding-right: 0.8rem !important; }
 
 .pr10 {
-  padding-right: 0.769rem !important; }
-
-.pr11 {
-  padding-right: 0.846rem !important; }
-
-.pr12 {
-  padding-right: 0.923rem !important; }
-
-.pr13 {
   padding-right: 1rem !important; }
 
+.pr11 {
+  padding-right: 1.1rem !important; }
+
+.pr12 {
+  padding-right: 1.2rem !important; }
+
+.pr13 {
+  padding-right: 1.3rem !important; }
+
 .pr14 {
-  padding-right: 1.077rem !important; }
+  padding-right: 1.4rem !important; }
 
 .pr15 {
-  padding-right: 1.154rem !important; }
+  padding-right: 1.5rem !important; }
 
 .pr16 {
-  padding-right: 1.23rem !important; }
+  padding-right: 1.6rem !important; }
 
 .pr18 {
-  padding-right: 1.385rem !important; }
+  padding-right: 1.8rem !important; }
 
 .pr20 {
-  padding-right: 1.53846rem !important; }
+  padding-right: 2rem !important; }
 
 .pr24 {
-  padding-right: 1.846rem !important; }
+  padding-right: 2.4rem !important; }
 
 .pr32 {
-  padding-right: 2.4615rem !important; }
+  padding-right: 3.2rem !important; }
 
 .pr36 {
-  padding-right: 2.76923rem !important; }
+  padding-right: 3.6rem !important; }
 
 /*
 清除浮动
@@ -606,7 +606,7 @@ UL横向显示
 
 .slide-right-transition,
 .slide-left-transition {
-  transition: all 0.5s ease;
+  transition: all 10.5s ease;
   width: 100%;
   overflow: hidden;
   white-space: nowrap;
@@ -622,18 +622,18 @@ UL横向显示
 
 .slide-right-leave {
   right: 0;
-  width: 0; }
+  width: 0px; }
 
 .slide-right-enter {
   right: 100%;
-  width: 0; }
+  width: 0px; }
 
 .slide-left-leave {
   left: -100%;
-  width: 0; }
+  width: 0px; }
 
 .slide-left-enter {
   left: 0;
-  width: 0; }
+  width: 0px; }
 
 /*# sourceMappingURL=common.css.map */
