--- a/src/assets/css/response.scss
+++ b/src/assets/css/response.scss
@@ -1,23 +1,24 @@
 @import "core/define";
 
+$dzzsize: 62.5%;
 @media all and (max-width:640px) {
     html {
-        font-size: $baseFontSize + 2;
+        font-size: $dzzsize*64/32;
     }
 }@media all and (max-width:480px) {
     html {
-        font-size: $baseFontSize + 2;
+        font-size: $dzzsize*48/32;
     }
 }@media all and (max-width:360px) {
     html {
-        font-size: $baseFontSize;
+        font-size: $dzzsize*36/32;
     }
 }@media all and (max-width:320px) {
     html {
-        font-size: $baseFontSize;
+        font-size: $dzzsize;
     }
 }@media all and (max-width:240px) {
     html {
-        font-size: $baseFontSize - 1;
+        font-size: $dzzsize*24/32;
     }
 }
